fix merge errors

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -220,7 +220,7 @@ Format: `show n/NAME`
 
 Examples:
 
-* Type `show n/ Tim` in the command line as shown below: +
+* Type `show n/Tim` in the command line as shown below: +
 
 image::showpersoncommand.png[]
 Hit the kbd:[Enter] key and you should see details of the person! You should see a window similar to the one below.
@@ -237,7 +237,7 @@ Format: `show g/GROUP_NAME`
 
 Examples:
 
-* Type `show g/ Team1` in the command line as shown below +
+* Type `show g/Team1` in the command line as shown below +
 
 image::showgroupcommand.png[]
 
@@ -302,13 +302,13 @@ Adds an NUS module as an event to a person's schedule in TimeBook. It checks and
 
 Format:
 
-* `addmod -n NAME -m MODULE_CODE -class CLASS_NUMBERS(comma-separated) [-ay ACADEMIC_YEAR] [-s SEMESTER]` +
+* `addmod n/NAME m/MODULE_CODE class/CLASS_NUMBERS(comma-separated) [ay/ACADEMIC_YEAR] [s/SEMESTER]` +
 
 Examples:
 
-* `addmod -n John -m CS2103T -class G01,T5`
-* `addmod -n John -m CS2103T -class G01,T5 -ay 2018/2019`
-* `addmod -n John -m CS2103T -class G01,T5 -ay 2019/2020 -s 1`
+* `addmod n/John m/CS2103T class/G01,T5`
+* `addmod n/John m/CS2103T class/G01,T5 ay/2018/2019`
+* `addmod n/John m/CS2103T class/G01,T5 ay/2019/2020 s/1`
 
 === Add Modules via Link: `addmods`
 
@@ -316,35 +316,12 @@ Adds NUS modules given the NUSMods share link, as events to a person's schedule 
 
 Format:
 
-* `addmods -n NAME -l NUSMODS_SHARE_LINK` +
+* `addmods n/NAME l/NUSMODS_SHARE_LINK` +
 
 Examples:
 
-* `addmods -n John -l https://nusmods.com/timetable/sem-1/share?CS2101=&CS2103T=LEC:G05&CS3230=LEC:1,TUT:08&CS3243=TUT:07,LEC:1&GEQ1000=TUT:D17`
-* `addmods -n Bob -l https://nusmods.com/timetable/sem-1/share?CS2101=&CS2103T=LEC:G05&CS3230=LEC:1,TUT:08&CS3243=TUT:07,LEC:1&GEQ1000=TUT:D17`
-
-=== Show group: `show`
-
-Shows details of a group: who are its members and their available timings +
-Format:
-
-* `show g/GROUP_NAME`
-
-Examples:
-
-* `show g/TimeBook` +
-* `show g/CS2030 T2`
-
-=== Show person: `show`
-
-Shows a person’s details along with their schedule +
-Format:
-
-* `show n/NAME` +
-
-Examples:
-
-* `show n/James Lee` +
+* `addmods n/John l/https://nusmods.com/timetable/sem-1/share?CS2101=&CS2103T=LEC:G05&CS3230=LEC:1,TUT:08&CS3243=TUT:07,LEC:1&GEQ1000=TUT:D17`
+* `addmods n/Bob l/https://nusmods.com/timetable/sem-1/share?CS2101=&CS2103T=LEC:G05&CS3230=LEC:1,TUT:08&CS3243=TUT:07,LEC:1&GEQ1000=TUT:D17`
 
 === Show Module: `showmod`
 
@@ -352,13 +329,13 @@ Shows the schedule of available classes for the module in the academic year and 
 
 Format:
 
-* `showmod -m MODULE_CODE [-ay ACADEMIC_YEAR] [-s SEMESTER]`
+* `showmod m/MODULE_CODE [ay/ACADEMIC_YEAR] [s/SEMESTER]`
 
 Examples:
 
-* `showmod -m CS2103T`
-* `showmod -m GEQ1000 -ay 2019/2020`
-* `showmod -m CS3230 -ay 2019/2020 -s 2`
+* `showmod m/CS2103T`
+* `showmod m/GEQ1000 ay/2019/2020`
+* `showmod m/CS3230 ay/2019/2020 s/2`
 
 === Export VR(Virtual Representation): `export-vr`
 
@@ -372,8 +349,8 @@ Format:
 
 Examples:
 
-* `export-vr g/ CS2103T Team project`
-* `export-vr n/ John Doe`
+* `export-vr g/CS2103T Team project`
+* `export-vr n/John Doe`
 
 //=== Export ICS: `export-ics`
 //
@@ -460,12 +437,12 @@ e.g. `deleteperson n/Benedict`
 e.g. `findperson n/James Jake`
 * *Add Event to Person's Schedule* : `addevent n/NAME e/EVENT_NAME t/DATETIME` +
 e.g. `addevent n/John e/Math Lecture t/26092019:1300-26092019:1400-LT25`
-* *Add Module to Person's Schedule* : `addmod -n NAME -m MODULE_CODE -class CLASS_NUMBERS(comma-separated) [-ay ACADEMIC_YEAR] [-s SEMESTER]` +
-e.g. `addmod -n John -m CS2103T -class G01,T5 -ay 2019/2020 -s 1`
-* *Add Modules to Person's Schedule via NUSMods Link* : `addmods -n NAME -l NUSMODS_SHARE_LINK` +
-e.g. `addmods -n John -l https://nusmods.com/timetable/sem-1/share?CS2101=&CS2103T=LEC:G05&CS3230=LEC:1,TUT:08&CS3243=TUT:07,LEC:1&GEQ1000=TUT:D17`
-* *Show Module Classes Schedule* : `showmod -m MODULE_CODE [-ay ACADEMIC_YEAR] [-s SEMESTER]` +
-e.g. `showmod -m CS3230 -ay 2019/2020 -s 2`
+* *Add Module to Person's Schedule* : `addmod n/NAME m/MODULE_CODE class/CLASS_NUMBERS(comma-separated) [ay/ACADEMIC_YEAR] [s/SEMESTER]` +
+e.g. `addmod n/John m/CS2103T class/G01,T5 ay/2019/2020 s/1`
+* *Add Modules to Person's Schedule via NUSMods Link* : `addmods n/NAME l/NUSMODS_SHARE_LINK` +
+e.g. `addmods n/John l/https://nusmods.com/timetable/sem-1/share?CS2101=&CS2103T=LEC:G05&CS3230=LEC:1,TUT:08&CS3243=TUT:07,LEC:1&GEQ1000=TUT:D17`
+* *Show Module Classes Schedule* : `showmod m/MODULE_CODE [ay/ACADEMIC_YEAR] [s/SEMESTER]` +
+e.g. `showmod m/CS3230 ay/2019/2020 s/2`
 * *Show Person Details and Schedule* : `show n/NAME` +
 e.g. `show n/James Lee`
 * *Add Group* `addgroup g/GROUP_NAME [r/GROUP_REMARK]` +
