Update warning symbols

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -293,7 +293,7 @@ Format: `addmod n/NAME m/MODULE_CODE cl/CLASS_1_TYPE:CLASS_1_NUMBER,CLASS_2_TYPE
 
 ****
 * Currently supports academic year 2019/2020 and semester 1 only.
-* WARNING: Just like adding a normal event via `addevent`, the module will only be added if the specified classes does not clash with any events in the person's schedule.
+* image:./icons/warning.png[]: Just like adding a normal event via `addevent`, the module will only be added if the specified classes does not clash with any events in the person's schedule.
 ****
 
 
@@ -322,7 +322,7 @@ Format: `addmods n/NAME l/NUSMODS_SHARE_LINK`
 ****
 * Reads the specified `NUSMODS_SHARE_LINK` to get the modules and classes, then adds the classes into the person's schedule.
 * Currently supports academic year 2019/2020 and semester 1 only.
-* WARNING: Just like adding a normal event via `addevent`, the module will only be added if the specified classes does not clash with any events in the person's schedule.
+* image:./icons/warning.png[]: Just like adding a normal event via `addevent`, the module will only be added if the specified classes does not clash with any events in the person's schedule.
 ****
 
 Examples:
