--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -371,13 +371,13 @@ Format: `addmod n/NAME m/MODULE_CODE cl/CLASS_1_TYPE:CLASS_1_NUMBER,CLASS_2_TYPE
 
 Examples:
 
-* `addmod n/John m/CS2103T cl/LEC:G01`
-* `addmod n/John m/CS3230 cl/LEC:1,TUT:08`
-* `addmod n/John m/CS2100 cl/LEC:1,TUT:01,LAB:08`
+* `addmod n/John m/CS2103T cl/LEC:G01`: This adds CS2103T lecture G01 to John's schedule.
+* `addmod n/John m/CS3230 cl/LEC:1,TUT:08`: This adds CS3230 lecture 1 and tutorial 08 to John's schedule.
+* `addmod n/John m/CS2100 cl/LEC:1,TUT:01,LAB:08`: This adds CS2100 lecture 1, tutorial 01 and lab 08 to John's schedule.
 
 Step-By-Step:
 
-. Add a module's classes easily by typing `addmod` into the command box and follow the format as shown above, then press btn:[Enter] to execute it.
+. Add a module's classes easily by typing `addmod` into the command box and specifying the appropriate parameters, then press btn:[Enter] to execute it.
 
 image::nusmods/addmod1.PNG[]
 
@@ -400,8 +400,8 @@ Format: `addmods n/NAME link/NUSMODS_SHARE_LINK`
 
 Examples:
 
-* `addmods n/John link/https://nusmods.com/timetable/sem-1/share?CS2101=&CS2103T=LEC:G05&CS3230=LEC:1,TUT:08&CS3243=TUT:07,LEC:1&GEQ1000=TUT:D17`
-* `addmods n/Bob link/https://nusmods.com/timetable/sem-1/share?CS2101=&CS2103T=LEC:G05&CS3230=LEC:1,TUT:08&CS3243=TUT:07,LEC:1&GEQ1000=TUT:D17`
+* `addmods n/John link/https://nusmods.com/timetable/sem-1/share?CS2101=&CS2103T=LEC:G05&CS3230=LEC:1,TUT:08&CS3243=TUT:07,LEC:1&GEQ1000=TUT:D17`: This will add the modules in the NUSMods link to John's schedule.
+* `addmods n/Bob link/https://nusmods.com/timetable/sem-1/share?CS2101=&CS2103T=LEC:G05&CS3230=LEC:1,TUT:08&CS3243=TUT:07,LEC:1&GEQ1000=TUT:D17`: This will add the modules in teh NUSMods link to Bob's schedule.
 
 Step-By-Step:
 
