--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -358,6 +358,7 @@ Examples:
 Deletes the event `Swimming Lessons` from `Bobby` 's schedule.
 ****
 
+// tag::addmod[]
 ==== Add Module to Schedule: `addmod`
 
 Adds an NUS module as an event to a person's schedule in TimeBook.
@@ -384,7 +385,9 @@ image::nusmods/addmod1.PNG[]
 . If you manage to successfully add the module and its classes into the person's schedule, you will see the person's schedule appearing with the newly added timeslots:
 
 image::nusmods/addmod2.PNG[]
+// end::addmod[]
 
+// tag::addmods[]
 ==== Add Modules via NUSMods Link: `addmods`
 
 Already have your modules timetable on NUSMods?
@@ -412,6 +415,7 @@ image::nusmods/addmods1.PNG[]
 . If you manage to successfully add all the modules and their respective classes into the person's schedule, you will see the person's schedule appearing with the newly added timeslots:
 
 image::nusmods/addmods2.PNG[]
+// end::addmods[]
 
 === Group Management
 
