--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -14,7 +14,7 @@ ifdef::env-github[]
 endif::[]
 :repoURL: https://github.com/se-edu/addressbook-level3/tree/master
 
-By: `Team SE-EDU`      Since: `Jun 2016`      Licence: `MIT`
+By: `Team TimeBook`      Since: `Aug 2019`      Licence: `MIT`
 
 == Setting up
 
@@ -44,14 +44,15 @@ The following class plays an important role at the architecture level:
 
 * `LogsCenter` : Used by many classes to write log messages to the App's log file.
 
-The rest of the App consists of four components.
+The rest of the App consists of five components.
 
 * <<Design-Ui,*`UI`*>>: The UI of the App.
 * <<Design-Logic,*`Logic`*>>: The command executor.
 * <<Design-Model,*`Model`*>>: Holds the data of the App in-memory.
 * <<Design-Storage,*`Storage`*>>: Reads data from, and writes data to, the hard disk.
+* <<Design-API,*`Api`*>>: Make queries to external APIs, handles caching of API results to hard disk, and passes API data to other components.
 
-Each of the four components
+Each of the five components
 
 * Defines its _API_ in an `interface` with the same name as the Component.
 * Exposes its functionality using a `{Component Name}Manager` class.
@@ -64,9 +65,9 @@ image::LogicClassDiagram.png[]
 [discrete]
 ==== How the architecture components interact with each other
 
-The _Sequence Diagram_ below shows how the components interact with each other for the scenario where the user issues the command `delete 1`.
+The _Sequence Diagram_ below shows how the components interact with each other for the scenario where the user issues the command `addmod m/CS3230 cl/LEC:01`.
 
-.Component interactions for `delete 1` command
+.Component interactions for `addmod m/CS3230 cl/LEC:01` command
 image::ArchitectureSequenceDiagram.png[]
 
 The sections below give more details of each component.
@@ -124,12 +125,6 @@ The `Model`,
 * stores a `UserPref` object that represents the user's preferences.
 * stores the Address Book data.
 * exposes an unmodifiable `ObservableList<Person>` that can be 'observed' e.g. the UI can be bound to this list so that the UI automatically updates when the data in the list change.
-* does not depend on any of the other three components.
-
-[NOTE]
-As a more OOP model, we can store a `Tag` list in `Address Book`, which `Person` can reference. This would allow `Address Book` to only require one `Tag` object per unique `Tag`, instead of each `Person` needing their own `Tag` object. An example of how such a model may look like is given below. +
- +
-image:BetterModelClassDiagram.png[]
 
 [[Design-Storage]]
 === Storage component
@@ -143,6 +138,19 @@ The `Storage` component,
 
 * can save `UserPref` objects in json format and read it back.
 * can save the Address Book data in json format and read it back.
+
+[[Design-API]]
+=== Api component
+
+.Expected structure of API Component in `v2.0`.
+image::api/ApiComponentClassDiagram.png[]
+[NOTE]
+Currently there is no `Api` interface or `ApiManager` to manage the external interactions with other components. Other components are directly accessing static methods in the `xxxApi` classes and `Cache` class for accessing API data. We intend to refactor the component to make it more OOP as shown in the figure above in `v2.0`.
+
+The `Api`,
+
+* handles queries to external APIs such as Google Maps and NUSMods.
+* handles caching of API results for limited connectivity support.
 
 [[Design-Commons]]
 === Common classes
@@ -534,17 +542,24 @@ image::nusmods/EventClassDiagram.png[align="center", width=75%, scaledwidth=18cm
 
 
 ==== Design Considerations
-//TODO: change to table
-===== Aspect: Ease of executing command as user.
-* **Alternative 1 (current choice):** Entering NUSMods share link
-** Pros: User can easily get the NUSMods share link of his/her existing NUSMods timetable and copy/paste the link into the command.
-** Cons: Less flexibility if user wants to add only some modules (has to adjust timetable on NUSMods or modify the link itself)
-* **Alternative 2:** Entering modules individually
-** Pros: More flexibility in specifying modules to add.
-** Cons: Tedious as user has to specify the semester, module codes and lesson numbers in the command.
-* **Alternative 3:** Importing the downloaded iCalendar file from NUSMods
-** Pros: Opens up the possibility of importing generic iCalendar files.
-** Cons: User is unlikely to be able to get the iCalendar files of his/her group members (due to tediousness and privacy reasons).
+|===
+| Aspect: | Choice | Pros | Cons
+.3+| Ease of use
+
+| 1. Allow user to add modules individually
+| Easier to implement.
+| Tedious for user, as user has to specify the module code, lesson types and lesson numbers in the command.
+
+| 2. Allow user to add modules via NUSMods share link *(current choice)*
+| User can easily get the NUSMods share link of his/her existing NUSMods timetable and copy/paste the link into the command.
+| Require implementation of complex URL validation and parsing.
+
+| 3. Allow user to import the downloaded iCalendar file from NUSMods
+| Opens up the possibility of importing generic iCalendar files.
+| Harder to implement, need to deal with file IO and .ics file format parsing. Also, user is unlikely to get the iCalendar files of his/her group members (due to tediousness)
+
+4+| We chose to implement choice 2 as it is the most user-friendly one. The bonus is that choice 1 has been implemented as well as it is easy to adapt what we have already implemented for choice 2 to make choice 1 work.
+|===
 
 // end::nusmods[]
 
@@ -552,11 +567,11 @@ image::nusmods/EventClassDiagram.png[align="center", width=75%, scaledwidth=18cm
 // tag::websocket[]
 === External APIs
 
-The application requires data from the https://api.nusmods.com/v2/[NUSMods API] for the <<Add NUSMods To Schedule, Add NUSMods To Schedule>> feature and data from the https://developers.google.com/maps/documentation[Google Maps API] for the <<Closest Common Location(Micro Service), Closest Common Location>> feature. The following subsections describe the implementation of various aspects with regards to working with external APIs:
+The application requires data from the https://api.nusmods.com/v2/[NUSMods API] for the <<Add NUSMods To Schedule, Add NUSMods To Schedule>> feature and data from the https://developers.google.com/maps/documentation[Google Maps API] for the <<Closest Common Location(Micro Service), Closest Common Location>> feature. The following subsections describe the implementation of the <<Design-API,Api component>>:
 
 ==== APIs
 
-We have implemented an `Api` component to contain the logic of interfacing with external APIs.
+We have implemented an `Api` component to contain the logic of interfacing with external APIs, the architecture diagram of this component can be seen in <<Design-API, Design -> Api component>>.
 
 The `websocket.NusModsApi` class contains methods for querying different endpoints of the NUSMods API and parsing the query results into `JSONObject` or `JSONArray` objects.
 
@@ -565,11 +580,6 @@ The `websocket.GmapsApi` class contains methods for querying different endpoints
 The `websocket.Cache` class handles the saving and loading of cached API results in the resources folder.
 
 The `websocket.util` folder contains various utility classes for querying external APIs.
-
-The following class diagram shows the expected internal structure of the API component:
-
-.Expected implementation of API Component in `v2.0` to improve abstraction. Currently there is no `ApiManager` which manages external interactions with other components, other components are accessing the `xxxApi` classes and `Cache` class directly for accessing API data.
-image::api/ApiComponentClassDiagram.png[]
 
 ==== Caching API Results
 
@@ -587,19 +597,24 @@ Notably, the key information that we require for each NUS module is the timetabl
 
 
 ==== Design Considerations
+|===
+| Aspect: | Choice | Pros | Cons
+.3+| Limited Connectivity Support
 
-===== Aspect: Limited Connectivity Support
-Current choice: we chose a combination of alternatives 1 and 2 to achieve robust limited connectivity support for our external API data.
+| 1. Preprocessing API results and storing it in resources folder.
+| Can achieve complete offline support, also avoids the issue of providing API keys in production *(current choice*).
+| Have to run the preprocessing programs in `logic.internal` from time to time to update data files, e.g. for modules in new academic year or new locations else features will not work.
 
-* **Alternative 1:** Preprocessing API
-** Pros: Can achieve complete offline support, also saves the issue of handling API keys.
-** Cons: Have to run preprocessing programs from time to time to update data files, e.g. for modules in new academic year or new locations else features will not work.
-* **Alternative 2:** Caching Query Results
-** Pros: Achieves limited connectivity support (call once and save result, then use saved result for future calls). Also, needs less work to support future data/API changes.
-** Cons: Not so useful in cases where a large number of queries is required to be preprocessed first, e.g. getting locations data from Google Maps API to generate `LocationGraph`.
-* **Alternative 3:** Direct API queries
-** Pros: Easy to implement, minimal work to support future data/API changes.
-** Cons: No limited connectivity support.
+| 2. Caching Query Results
+| Achieves limited connectivity support (call once and save result, then use saved result for future calls). Also, needs less work to support future data/API changes.
+| Not so useful in cases where a large number of queries is required to be preprocessed first in order to handle a single user command, e.g. finding common location requires building a `LocationGraph` after getting the locations data from Google Maps.
+
+| 3. Direct API queries
+| Easy to implement, minimal work to support future data/API changes.
+| No limited connectivity support.
+
+4+| The choice of implementation was progressive - it was initially choice 3 for prototyping, then enhanced to choice 2, and finally adapted to choice 1. Choice 1 suits our needs the best as it can achieve complete offline support and avoid handling API keys in production. Additionally, the cons of choice 1 is manageable. However, a mix of choice 1 and 2 will be required moving forward if we intend to support non-NUS locations or multiple academic semesters.
+|===
 
 // end::websocket[]
 
@@ -755,6 +770,9 @@ Preconditions: meeting group is created.
 
 [[mainstream-os]] Mainstream OS::
 Windows, Linux, Unix, OS-X
+
+[[api]] API::
+Application Programming Interface
 
 [appendix]
 == Product Survey
